Inter-stage variables connect by location example

--- a/02_inter-stage-variables/CMakeLists.txt
+++ b/02_inter-stage-variables/CMakeLists.txt
@@ -9,3 +9,9 @@ add_executable(webgpu-inter-stage-variables-triangle
 webgpu-inter-stage-variables-triangle.c
 )
 target_link_libraries(webgpu-inter-stage-variables-triangle PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------INTER_STAGE_VARIABLES_CONNECT_BY_LOCATION
+add_executable(inter_stage_variables_connect_by_location
+inter_stage_variables_connect_by_location.c
+)
+target_link_libraries(inter_stage_variables_connect_by_location PRIVATE glfw wgpu_native create_surface framework)
