--- a/02_inter-stage-variables/CMakeLists.txt
+++ b/02_inter-stage-variables/CMakeLists.txt
@@ -15,3 +15,9 @@ add_executable(inter_stage_variables_connect_by_location
 inter_stage_variables_connect_by_location.c
 )
 target_link_libraries(inter_stage_variables_connect_by_location PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------INTER_STAGE_VARIABLES_CONNECT_BY_LOCATION
+add_executable(inter_stage_variables_connect_by_location_part2
+inter_stage_variables_connect_by_location_part2.c
+)
+target_link_libraries(inter_stage_variables_connect_by_location_part2 PRIVATE glfw wgpu_native create_surface framework)
