--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,3 +73,4 @@ add_subdirectory(triangle_)
 add_subdirectory(01_fundamentals)
 add_subdirectory(02_inter-stage-variables)
 add_subdirectory(03_uniforms)
+add_subdirectory(04_storage-buffers)
