--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,3 +74,4 @@ add_subdirectory(01_fundamentals)
 add_subdirectory(02_inter-stage-variables)
 add_subdirectory(03_uniforms)
 add_subdirectory(04_storage-buffers)
+add_subdirectory(05_vertex-buffers)
