WebGPU Vertex Buffers part 2

--- a/05_vertex-buffers/CMakeLists.txt
+++ b/05_vertex-buffers/CMakeLists.txt
@@ -10,3 +10,9 @@ add_executable(webgpu-vertex-buffers
 webgpu-vertex-buffers.c
 )
 target_link_libraries(webgpu-vertex-buffers PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------WEBGPU-VERTEX-BUFFERS-2-ATTRIBUTES
+add_executable(webgpu-vertex-buffers-2-attributes
+webgpu-vertex-buffers-2-attributes.c
+)
+target_link_libraries(webgpu-vertex-buffers-2-attributes PRIVATE glfw wgpu_native create_surface framework)
