WebGPU Textures part 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,3 +75,4 @@ add_subdirectory(02_inter-stage-variables)
 add_subdirectory(03_uniforms)
 add_subdirectory(04_storage-buffers)
 add_subdirectory(05_vertex-buffers)
+add_subdirectory(06_textures)
