WebGPU Textures part 4

--- a/06_textures/CMakeLists.txt
+++ b/06_textures/CMakeLists.txt
@@ -22,3 +22,9 @@ add_executable(webgpu-simple-textured-quad-minfilter
 webgpu-simple-textured-quad-minfilter.c
 )
 target_link_libraries(webgpu-simple-textured-quad-minfilter PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------WEBGPU-SIMPLE-TEXTURED-QUAD-MIPMAP
+add_executable(webgpu-simple-textured-quad-mipmap
+webgpu-simple-textured-quad-mipmap.c
+)
+target_link_libraries(webgpu-simple-textured-quad-mipmap PRIVATE glfw wgpu_native create_surface framework)
