--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,3 +76,4 @@ add_subdirectory(03_uniforms)
 add_subdirectory(04_storage-buffers)
 add_subdirectory(05_vertex-buffers)
 add_subdirectory(06_textures)
+add_subdirectory(07_importing_images)
