RESOURCE_DIR now refers to whole directory path where resource file is located instead of just the /res/ directory made RESOURCE_DIR definition per subdirectory CMakeLists.txt file instead of root CMakeLists.txt

--- a/04_storage-buffers/CMakeLists.txt
+++ b/04_storage-buffers/CMakeLists.txt
@@ -4,6 +4,8 @@ project(
 	VERSION 0.1.0 # any version number
 	LANGUAGES CXX C # programming languages used by the project
 )
+add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/res/04_storage-buffers/")
+
 #--------------WEBGPU-SIMPLE-TRIANGLE-STORAGE-SPLIT-MINIMAL-CHANGES
 add_executable(webgpu-simple-triangle-storage-split-minimal-changes
 webgpu-simple-triangle-storage-split-minimal-changes.c
