--- a/01_fundamentals/CMakeLists.txt
+++ b/01_fundamentals/CMakeLists.txt
@@ -4,6 +4,9 @@ project(
 	VERSION 0.1.0 # any version number
 	LANGUAGES CXX C # programming languages used by the project
 )
+add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/res/01_fundamentals/")
+
+
 #--------------WEBGPU-SIMPLE-TRIANGLE
 add_executable(webgpu-simple-triangle
 webgpu-simple-triangle.c
