moved project res directory into the repective subdirectory

--- a/05_vertex-buffers/CMakeLists.txt
+++ b/05_vertex-buffers/CMakeLists.txt
@@ -4,7 +4,7 @@ project(
 	VERSION 0.1.0 # any version number
 	LANGUAGES CXX C # programming languages used by the project
 )
-add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/res/05_vertex-buffers/")
+add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/05_vertex-buffers/res/")
 
 #--------------WEBGPU-VERTEX-BUFFERS
 add_executable(webgpu-vertex-buffers
