--- a/triangle_/CMakeLists.txt
+++ b/triangle_/CMakeLists.txt
@@ -4,7 +4,7 @@ project(
 	VERSION 0.1.0 # any version number
 	LANGUAGES CXX C # programming languages used by the project
 )
-add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/res/")
+add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/triangle_/res/")
 #--------------TRIANGLE
 add_executable(triangle
 main.c
