moved the basics part of the tutorial into the basics subdirectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,10 +73,4 @@ target_include_directories(framework PUBLIC ${CMAKE_SOURCE_DIR})
 # add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/res")
 
 add_subdirectory(triangle_)
-add_subdirectory(01_fundamentals)
-add_subdirectory(02_inter-stage-variables)
-add_subdirectory(03_uniforms)
-add_subdirectory(04_storage-buffers)
-add_subdirectory(05_vertex-buffers)
-add_subdirectory(06_textures)
-add_subdirectory(07_importing_images)
+add_subdirectory(basics)
