--- a/basics/01_fundamentals/CMakeLists.txt
+++ b/basics/01_fundamentals/CMakeLists.txt
@@ -1,10 +1,9 @@
-cmake_minimum_required(VERSION 3.0...3.25)
 project(
 	Fundamentals # name of the project, which will also be the name of the visual studio solution if you use it
 	VERSION 0.1.0 # any version number
 	LANGUAGES CXX C # programming languages used by the project
 )
-add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/01_fundamentals/res/")
+add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/basics/01_fundamentals/res/")
 
 
 #--------------WEBGPU-SIMPLE-TRIANGLE
