--- a/basics/03_uniforms/CMakeLists.txt
+++ b/basics/03_uniforms/CMakeLists.txt
@@ -4,7 +4,7 @@ project(
 	VERSION 0.1.0 # any version number
 	LANGUAGES CXX C # programming languages used by the project
 )
-add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/03_uniforms/res/")
+add_compile_definitions(RESOURCE_DIR="${CMAKE_SOURCE_DIR}/basics/03_uniforms/res/")
 
 #--------------WEBGPU-SIMPLE-TRIANGLE-UNIFORMS
 add_executable(webgpu-simple-triangle-uniforms
