WebGPU Translation part 2

--- a/3d_math/01_translation/CMakeLists.txt
+++ b/3d_math/01_translation/CMakeLists.txt
@@ -11,3 +11,9 @@ add_executable(webgpu-translation-prep
 webgpu-translation-prep.c
 )
 target_link_libraries(webgpu-translation-prep PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------WEBGPU-TRANSLATION
+add_executable(webgpu-translation
+webgpu-translation.c
+)
+target_link_libraries(webgpu-translation PRIVATE glfw wgpu_native create_surface framework)
