WebGPU Matrix Math part 1

--- a/3d_math/CMakeLists.txt
+++ b/3d_math/CMakeLists.txt
@@ -7,3 +7,4 @@ project(
 add_subdirectory(01_translation)
 add_subdirectory(02_rotation)
 add_subdirectory(03_scale)
+add_subdirectory(04_matrix_math)
