--- a/3d_math/04_matrix_math/CMakeLists.txt
+++ b/3d_math/04_matrix_math/CMakeLists.txt
@@ -11,3 +11,9 @@ add_executable(webgpu-matrix-math-transform-trs-3x3
 webgpu-matrix-math-transform-trs-3x3.c
 )
 target_link_libraries(webgpu-matrix-math-transform-trs-3x3 PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------WEBGPU-MATRIX-MATH-TRANSFORM-SRT-3X3
+add_executable(webgpu-matrix-math-transform-srt-3x3
+webgpu-matrix-math-transform-srt-3x3.c
+)
+target_link_libraries(webgpu-matrix-math-transform-srt-3x3 PRIVATE glfw wgpu_native create_surface framework)
