--- a/3d_math/04_matrix_math/CMakeLists.txt
+++ b/3d_math/04_matrix_math/CMakeLists.txt
@@ -17,3 +17,9 @@ add_executable(webgpu-matrix-math-transform-srt-3x3
 webgpu-matrix-math-transform-srt-3x3.c
 )
 target_link_libraries(webgpu-matrix-math-transform-srt-3x3 PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------WEBGPU-MATRIX-MATH-TRANSFORM-FIVE-FS-3X3
+add_executable(webgpu-matrix-math-transform-five-fs-3x3
+webgpu-matrix-math-transform-five-fs-3x3.c
+)
+target_link_libraries(webgpu-matrix-math-transform-five-fs-3x3 PRIVATE glfw wgpu_native create_surface framework)
