--- a/3d_math/04_matrix_math/CMakeLists.txt
+++ b/3d_math/04_matrix_math/CMakeLists.txt
@@ -35,3 +35,9 @@ add_executable(webgpu-matrix-math-transform-just-matrix-3x3
 webgpu-matrix-math-transform-just-matrix-3x3.c
 )
 target_link_libraries(webgpu-matrix-math-transform-just-matrix-3x3 PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------WEBGPU-MATRIX-MATH-TRANSFORM-TRS
+add_executable(webgpu-matrix-math-transform-trs
+webgpu-matrix-math-transform-trs.c
+)
+target_link_libraries(webgpu-matrix-math-transform-trs PRIVATE glfw wgpu_native create_surface framework)
