WebGPU Orthographic Projection Part 1

--- a/3d_math/CMakeLists.txt
+++ b/3d_math/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(01_translation)
 add_subdirectory(02_rotation)
 add_subdirectory(03_scale)
 add_subdirectory(04_matrix_math)
+add_subdirectory(05_orthographic_projection)
