--- a/3d_math/05_orthographic_projection/CMakeLists.txt
+++ b/3d_math/05_orthographic_projection/CMakeLists.txt
@@ -17,3 +17,9 @@ add_executable(webgpu-orthographic-projection-step-2-3d-f
 webgpu-orthographic-projection-step-2-3d-f.c
 )
 target_link_libraries(webgpu-orthographic-projection-step-2-3d-f PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------WEBGPU-ORTHOGRAPHIC-PROJECTION-STEP-3-COLORED-3D-f
+add_executable(webgpu-orthographic-projection-step-3-colored-3d-f
+webgpu-orthographic-projection-step-3-colored-3d-f.c
+)
+target_link_libraries(webgpu-orthographic-projection-step-3-colored-3d-f PRIVATE glfw wgpu_native create_surface framework)
