WebGPU Perspective Projection Part 1

--- a/3d_math/CMakeLists.txt
+++ b/3d_math/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(02_rotation)
 add_subdirectory(03_scale)
 add_subdirectory(04_matrix_math)
 add_subdirectory(05_orthographic_projection)
+add_subdirectory(06_perspective_projection)
