WebGPU Cameras Part 3

--- a/3d_math/07_cameras/CMakeLists.txt
+++ b/3d_math/07_cameras/CMakeLists.txt
@@ -17,3 +17,9 @@ add_executable(webgpu-cameras-step-2-camera-aim
 webgpu-cameras-step-2-camera-aim.c
 )
 target_link_libraries(webgpu-cameras-step-2-camera-aim PRIVATE glfw wgpu_native create_surface framework)
+
+#--------------WEBGPU-CAMERAS-STEP-3-LOOK-AT
+add_executable(webgpu-cameras-step-3-look-at
+webgpu-cameras-step-3-look-at.c
+)
+target_link_libraries(webgpu-cameras-step-3-look-at PRIVATE glfw wgpu_native create_surface framework)
