--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,3 +78,4 @@ target_include_directories(framework PUBLIC ${CMAKE_SOURCE_DIR})
 add_subdirectory(triangle_)
 add_subdirectory(basics)
 add_subdirectory(3d_math)
+add_subdirectory(compute_shaders)
