fixed ffmpeg example

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,25 @@
 			"targets": [
 				"all"
 			],
+			"group": "build",
+			"problemMatcher": [],
+			"detail": "CMake template build task"
+		},
+		{
+			"type": "cmake",
+			"label": "CMake: configure",
+			"command": "configure",
+			"problemMatcher": [],
+			"detail": "CMake template configure task",
+			"group": "build"
+		},
+		{
+			"type": "cmake",
+			"label": "CMake: build",
+			"command": "build",
+			"targets": [
+				"all"
+			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
