--- a/basics/07_importing_images/CMakeLists.txt
+++ b/basics/07_importing_images/CMakeLists.txt
@@ -19,7 +19,7 @@ webgpu-simple-textured-quad-import.c
 target_link_libraries(webgpu-simple-textured-quad-import PRIVATE glfw wgpu_native create_surface framework cglm)
 
 #--------------WEBGPU-SIMPLE-TEXTURED-QUAD-IMPORT-VIDEO
-if(HAS_FFMPEG)
+if(FFMPEG_FOUND)
   add_executable(webgpu-simple-textured-quad-import-video
   webgpu-simple-textured-quad-import-video.c
   )
